--- a/css/sass/general.scss
+++ b/css/sass/general.scss
@@ -17,7 +17,7 @@ a {
 	&:focus {
 		text-decoration: none;
 	}
-}	
+}
 ul {
 	padding-left: 0;
 }
@@ -86,7 +86,7 @@ textarea {
 .textarea-ui {
     background: #eeeeee;
 	width: 100%;
-	min-height: 250px;
+	min-height: 260px;
     font-size: 14px;
     padding: 5px;
     border: 1px solid #dcdada;
@@ -144,4 +144,39 @@ textarea {
 	    	background: #ff9800;
 	    }
 	}
+}
+
+.pagination-section {
+    text-align:  center;
+    .pagination-ui {
+        display: inline-block;
+        margin: 15px 0 0;
+        li {
+            display:  inline-block;
+            > a {
+                color: #4dd0e1;
+                background: #eeeeee;
+                border: 1px solid #e0e0e0;
+                padding: 10px 20px;
+                display: inline-block;
+                text-decoration:  none;
+            }
+            &.current,
+            &:hover {
+                > a {
+                    background: #4dd0e1;
+                    color:  #fff;
+                }
+            }
+            &:first-child a {
+                border-top-left-radius: 4px;
+                border-bottom-left-radius: 4px;
+            }
+
+            &:last-child a {
+                border-top-right-radius: 4px;
+                border-bottom-right-radius: 4px;
+            }
+        }
+    }
 }
