--- a/css/sass/layout.scss
+++ b/css/sass/layout.scss
@@ -2,14 +2,19 @@
     background: #fff;
     box-shadow: 0px 1px 20px rgba(0, 0, 0, 0.45);
     border-radius:  4px;
-    padding:  10px;
+    padding:  10px 10px 25px;
     margin: 45px 25px;
     transition: height 0.15s ease-in-out;
     #tasks-list {
+        width: 100%;
         margin-bottom: 0;
-/*        overflow: hidden;
-        overflow-y: scroll;*/
-        max-height: 350px;
+        display: inline-block;
+        &:after {
+            content: '';
+            position: relative;
+            display: block;
+            clear: both;
+        }
     }
 }
 .task-title-field-section {
@@ -19,7 +24,7 @@
         font-size: 14px;
         padding:    5px;
         float: left;
-    }    
+    }
 }
 
 .single-task-header {
@@ -36,6 +41,8 @@
     padding: 5px;
     border-bottom: 1px solid #dcdada;
     transition: background 0.15s ease-in-out;
+    display: block;
+    width: 100%;
     &:hover {
     	background: #EEEEEE;
     }
