--- a/css/style.css
+++ b/css/style.css
@@ -33,10 +33,11 @@
 }
 
 .item-list .loading {
-  margin: 0 auto;
+  margin: 100px auto;
   font-size: 10px;
   position: relative;
   display: block;
+  overflow: hidden;
   text-indent: -9999em;
   border: 5px solid rgba(0, 0, 0, 0.35);
   border-left: 5px solid rgba(0, 0, 0, 0.68);
@@ -248,7 +249,7 @@ textarea:focus {
 .textarea-ui {
   background: #eeeeee;
   width: 100%;
-  min-height: 250px;
+  min-height: 260px;
   font-size: 14px;
   padding: 5px;
   border: 1px solid #dcdada;
@@ -317,20 +318,63 @@ textarea:focus {
   background: #ff9800;
 }
 
+.pagination-section {
+  text-align: center;
+}
+
+.pagination-section .pagination-ui {
+  display: inline-block;
+  margin: 15px 0 0;
+}
+
+.pagination-section .pagination-ui li {
+  display: inline-block;
+}
+
+.pagination-section .pagination-ui li > a {
+  color: #4dd0e1;
+  background: #eeeeee;
+  border: 1px solid #e0e0e0;
+  padding: 10px 20px;
+  display: inline-block;
+  text-decoration: none;
+}
+
+.pagination-section .pagination-ui li.current > a, .pagination-section .pagination-ui li:hover > a {
+  background: #4dd0e1;
+  color: #fff;
+}
+
+.pagination-section .pagination-ui li:first-child a {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.pagination-section .pagination-ui li:last-child a {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
 #tasks-list-container {
   background: #fff;
   box-shadow: 0px 1px 20px rgba(0, 0, 0, 0.45);
   border-radius: 4px;
-  padding: 10px;
+  padding: 10px 10px 25px;
   margin: 45px 25px;
   transition: height 0.15s ease-in-out;
 }
 
 #tasks-list-container #tasks-list {
+  width: 100%;
   margin-bottom: 0;
-  /*        overflow: hidden;
-        overflow-y: scroll;*/
-  max-height: 350px;
+  display: inline-block;
+}
+
+#tasks-list-container #tasks-list:after {
+  content: '';
+  position: relative;
+  display: block;
+  clear: both;
 }
 
 .task-title-field-section {
@@ -359,6 +403,8 @@ textarea:focus {
   padding: 5px;
   border-bottom: 1px solid #dcdada;
   transition: background 0.15s ease-in-out;
+  display: block;
+  width: 100%;
 }
 
 .task-item:hover {
